@@ -1,6 +1,6 @@
 (cl:in-package #:eclector.parse-result)
 
-;;; Each Instance wraps an "inner", ordinary labeled object (that is
+;;; Each instance wraps an "inner", ordinary labeled object (that is
 ;;; whatever the next MAKE-LABELED-OBJECT method for the current
 ;;; client returns) so that a parse result can be associated with the
 ;;; labeled object in addition to the final object which the inner
@@ -9,18 +9,29 @@
 ;;; wrap the %WRAPPER instance in some other object (which is the case
 ;;; by default; see the "Fixup work tree" section in
 ;;; reader/labeled-objects.lisp).
+;;;
+;;; The STATE and PARSE-RESULT slots track the associated parse
+;;; result.  The initial state is :UNDEFINED which is changed to
+;;; :AVAILABLE when a nested READ call produces the required parse
+;;; result (this transition may never happen due to error recovery).
+;;; Once an expression result has been produced for the (circular or
+;;; non-circular) labeled object, the state changes again to :DEFINED
+;;; which signals to the parse result construction for subsequent
+;;; references to the labeled object that the stored parse result can
+;;; be used.
 (defstruct (%wrapper (:constructor %make-wrapper (inner))
                      (:predicate nil)
                      (:copier nil))
   (inner (error "required") :read-only t)
   (outer)
+  (state :undefined :type (member :undefined :available :defined))
   (parse-result nil))
 
 ;;; A binding with value NIL is established in the READ-MAYBE-NOTHING
 ;;; method specialized to PARSE-RESULT-CLIENT.  The value of the
 ;;; binding is changed to a %WRAPPER object in a MAKE-LABELED-OBJECT
 ;;; below.
-(defvar *wrapper*)
+(defvar *wrapper* nil)
 
 (defmethod eclector.reader:make-labeled-object ((client parse-result-client)
                                                 (input-stream t)
@@ -80,75 +91,84 @@
   ;; REFERENCE-LABELED-OBJECT was called in the READ call for which we
   ;; construct the expression result, *WRAPPER* is bound to a %WRAPPER
   ;; instance.
-  (let ((wrapper *wrapper*))
-    (if (null wrapper)
-        (call-next-method) ; no definition or reference, nothing to do
-        (let* ((inner-labeled-object (%wrapper-inner wrapper))
-               (state (eclector.reader:labeled-object-state
-                       client inner-labeled-object)))
-          (cond ((not (find state '(:final :final/circular))) ; inner not finalized
-                 (call-next-method))
-                ((not (null (%wrapper-parse-result wrapper))) ; parse result in labeled object
-                 (let ((reference (make-reference wrapper))
-                       (*wrapper* nil)) ; avoid re-entry
-                   (declare (dynamic-extent reference))
-                   (make-expression-result client reference children source)))
-                ((not (null children)) ; inner finalized, no parse result, child
-                 ;; CHILDREN can have multiple elements if we skipped
-                 ;; over some material before reading an object.  The
-                 ;; object will be the final child.
-                 (setf (%wrapper-parse-result wrapper)
-                       (alexandria:lastcar children))
-                 (let ((*wrapper* nil)) ; avoid re-entry
-                   ;; The outermost wrapping labeled object may have
-                   ;; more information regarding when to fix things
-                   ;; up.
-                   (let ((outer (%wrapper-outer wrapper)))
-                     (when (eclector.reader:fixup-graph-p client outer)
-                       ;; Fix up the graph of parse results.
-                       (eclector.reader:fixup-graph
-                        client outer
-                        :object-key (lambda (client labeled-object)
-                                      (declare (ignore client))
-                                      (%wrapper-parse-result labeled-object)))))
-                   ;; Due to custom reader macros which may have
-                   ;; bypassed our machinery, RESULT may be different
-                   ;; from the object in WRAPPER.
-                   (let ((definition (make-definition wrapper)))
-                     (declare (dynamic-extent definition))
-                     (if (eq result (nth-value
-                                     1 (eclector.reader:labeled-object-state
-                                        client wrapper)))
-                         ;; RESULT is the object of WRAPPER.  That
-                         ;; means it is safe to build the parse result
-                         ;; from DEFINITION and CHILDREN.
-                         (make-expression-result client definition children source)
-                         ;; RESULT is different from the object in
-                         ;; WRAPPER.  Call the next method with RESULT
-                         ;; and CHILDREN so that we can be sure that
-                         ;; we return a parse result with RESULT as
-                         ;; the "raw" object and CHILDREN as the
-                         ;; children (instead of the possible
-                         ;; incorrect data we would get from WRAPPER.
-                         ;; However, Try to slip a labeled object
-                         ;; definition parse result into children to
-                         ;; give the client a chance to reconstruct a
-                         ;; suitable parse result sub-tree.
-                         (let* ((definition-result (make-expression-result
-                                                    client definition children source))
-                                (children (substitute
-                                           definition-result
-                                           (%wrapper-parse-result wrapper)
-                                           children)))
-                           (call-next-method client result children source))))))
-                (t ; inner finalized, no parse result, but also no child
-                 ;; This can happen when the clients chooses to
-                 ;; recover for input like #1=.  In that case, no
-                 ;; child parse results will be recorded.  This is
-                 ;; fine however, since the next method will simply
-                 ;; produce a parse result for the replacement value
-                 ;; which is the value of RESULT.
-                 (call-next-method)))))))
+  (if-let ((wrapper *wrapper*))
+    (let* ((inner-labeled-object (%wrapper-inner wrapper))
+           (state (eclector.reader:labeled-object-state
+                   client inner-labeled-object)))
+      (cond ;; In this case, the inner parse result is not yet finalized.
+            ((not (find state '(:final :final/circular)))
+             (call-next-method))
+            ;; In this case the parse result which corresponds to the
+            ;; definition of the labeled is fully defined, so this
+            ;; occurrence must be a subsequent reference.
+            ((eq (%wrapper-state wrapper) :defined)
+             (let ((reference (make-reference wrapper))
+                   (*wrapper* nil)) ; avoid re-entry
+               (declare (dynamic-extent reference))
+               (make-expression-result client reference children source)))
+            ;; In this case, the inner parse result is finalized and a
+            ;; nested READ call has made available a parse result
+            ;; which corresponds to the definition of the labeled
+            ;; object.
+            ((eq (%wrapper-state wrapper) :available)
+             (let ((parse-result (%wrapper-parse-result wrapper))
+                   (*wrapper* nil)) ; avoid re-entry
+               ;; The outermost wrapping labeled object may have more
+               ;; information regarding when to fix things up.
+               (let ((outer (%wrapper-outer wrapper)))
+                 (when (eclector.reader:fixup-graph-p client outer)
+                   ;; Fix up the graph of parse results.
+                   (eclector.reader:fixup-graph
+                    client outer
+                    :object-key (lambda (client labeled-object)
+                                  (declare (ignore client))
+                                  (%wrapper-parse-result labeled-object)))))
+               ;; The parse result which corresponds to the labeled
+               ;; object is now fully defined.  Subsequent references
+               ;; to the labeled object can use the information in
+               ;; WRAPPER.
+               (setf (%wrapper-state wrapper) :defined)
+               ;; Due to custom reader macros which may have bypassed
+               ;; our machinery or due to error recovery, RESULT may
+               ;; be different from the object in WRAPPER.
+               (let ((definition (make-definition wrapper)))
+                 (declare (dynamic-extent definition))
+                 (if (eq result (nth-value
+                                 1 (eclector.reader:labeled-object-state
+                                    client wrapper)))
+                     ;; RESULT is the object of WRAPPER.  That means
+                     ;; it is safe to build the parse result from
+                     ;; DEFINITION and CHILDREN.
+                     (make-expression-result client definition children source)
+                     ;; RESULT is different from the object in
+                     ;; WRAPPER.  Call the next method with RESULT and
+                     ;; CHILDREN so that we can be sure that we return
+                     ;; a parse result with RESULT as the "raw" object
+                     ;; and CHILDREN as the children (instead of the
+                     ;; possible incorrect data we would get from
+                     ;; WRAPPER.  However, Try to slip a labeled
+                     ;; object definition parse result into children
+                     ;; to give the client a chance to reconstruct a
+                     ;; suitable parse result sub-tree.
+                     (let* ((definition-result (make-expression-result
+                                                client definition '() source))
+                            (children (substitute
+                                       definition-result parse-result children)))
+                       (call-next-method client result children source))))))
+            ;; In this case, the inner parse result is finalized but
+            ;; there is no parse result in WRAPPER, for example due to
+            ;; error recovery.
+            (t
+             ;; This can happen when the clients chooses to recover
+             ;; for input like #1=#|comment|#<eof>.  In that case, no
+             ;; usable child parse result has been recorded.  This is
+             ;; fine however, since the next method will simply
+             ;; produce a parse result for the replacement value which
+             ;; is the value of RESULT.
+             (call-next-method))))
+    ;; *WRAPPER* is null, so no definition or reference so nothing to
+    ;; do.
+    (call-next-method)))
 
 (defmethod make-expression-result ((client parse-result-client)
                                    (result definition)
